--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -406,3 +406,158 @@ body {
     font-size: 18px; /* ボタンのフォントサイズを大きく */
     padding: 10px 20px; /* ボタンのパディングを増やす */
 }
+
+.simple-calendar {
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.calendar-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.calendar-title {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.table-bordered {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table-bordered th, .table-bordered td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left; /* 左寄せ */
+    vertical-align: top; /* 上寄せ */
+    height: 100px;
+}
+
+.table-bordered th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+.table-bordered td {
+    background-color: #fff;
+}
+
+.table-bordered .today {
+    background-color: #f0f8ff;
+}
+
+.table-bordered .date {
+    font-weight: bold;
+}
+
+.table-bordered .company-link-wrapper {
+    margin-top: 5px;
+}
+
+.table-bordered .company-link {
+    display: block;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 2px;
+    text-decoration: none;
+    color: #007bff;
+}
+
+.table-bordered .company-link:hover {
+    background-color: #e8e8e8;
+}
+
+.signup-form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-title {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+}
+
+.field {
+    margin-bottom: 15px;
+}
+
+.form-label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.form-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.actions {
+    text-align: center;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+/* Form container to center the form and add styling */
+.form-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background: white;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+  /* Styling for form fields */
+.field {
+    margin-bottom: 15px;
+}
+
+  /* Styling for form buttons */
+.actions {
+    text-align: center;
+}
+
+  /* Center the delete account section */
+.delete-account {
+    text-align: center;
+    margin-top: 20px;
+}
+
+  /* Center the back link */
+.back-link {
+    text-align: center;
+    margin-top: 10px;
+}
