--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,15 +1,17 @@
+<% month_names = ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'] %>
+
 <div class="simple-calendar">
   <div class="calendar-heading">
-    <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-    <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+    <%= link_to '前月', calendar.url_for_previous_view, remote: true %>
+    <span class="calendar-title"><%= month_names[start_date.month - 1] %> <%= start_date.year %></span>
+    <%= link_to '翌月', calendar.url_for_next_view, remote: true %>
   </div>
 
-  <table class="table table-striped">
+  <table class="table table-bordered">
     <thead>
       <tr>
-        <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday] %></th>
+        <% ['月', '火', '水', '木', '金', '土', '日'].each do |day| %>
+          <th><%= day %></th>
         <% end %>
       </tr>
     </thead>
@@ -19,10 +21,11 @@
         <tr>
           <% week.each do |day| %>
             <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-              <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(passed_block) %>
-                <% capture_haml(day, sorted_events.fetch(day, []), &passed_block) %>
-              <% else %>
-                <% passed_block.call day, sorted_events.fetch(day, []) %>
+              <div class="date"><%= day.day %></div>
+              <% events_for_day(day, @companies).each do |event| %>
+                <div class="company-link-wrapper">
+                  <%= link_to event.name, company_path(event), class: 'company-link' %>
+                </div>
               <% end %>
             <% end %>
           <% end %>
